--- a/translation/de/sabbamitta/sutta/an/an8/an8.20_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an8/an8.20_translation-de-sabbamitta.json
@@ -44,7 +44,7 @@
   "an8.20:7.3": "Das Weltmeer neigt sich allmählich nach unten, strebt allmählich nach unten und richtet sich allmählich nach unten aus, ohne einen plötzlichen Abbruch. ",
   "an8.20:7.5": "Das ist das erste unglaubliche und erstaunliche Ding, dessentwegen die Titanen das Weltmeer lieben. ",
   "an8.20:7.6": "(In voller Länge sprechen wie in der vorhergehenden Lehrrede.) ",
-  "an8.20:8.1": "Weiter leben im Weltmeer große Geschöpfe wie Leviathane, Leviathan-Fresser, Leviathan-Fresser-Fresser, Titanen, Drachen und Zentauren. Im Weltmeer gibt es Lebensformen mit einer Länge von hundert Meilen oder gar zweihundert, dreihundert, vierhundert oder fünfhundert Meilen. ",
+  "an8.20:8.1": "Weiter leben im Weltmeer große Geschöpfe wie Leviathane, Leviathan-Fresser, Leviathan-Fresser-Fresser, Titanen, Drachen und Zentauren. Im Weltmeer gibt es Verkörperungen mit einer Länge von hundert Meilen oder gar zweihundert, dreihundert, vierhundert oder fünfhundert Meilen. ",
   "an8.20:8.3": "Das ist das achte unglaubliche und erstaunliche Ding, dessentwegen die Titanen das Weltmeer lieben. ",
   "an8.20:8.4": "Da sie diese acht unglaublichen und erstaunlichen Dinge sehen, lieben die Titanen das Weltmeer. ",
   "an8.20:9.1": "Ebenso, Mönche und Nonnen, sehen die Mönche und Nonnen acht unglaubliche und erstaunliche Dinge, derentwegen sie diese Lehre und Schulung lieben. ",
