--- a/translation/de/sabbamitta/sutta/an/an3/an3.62_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an3/an3.62_translation-de-sabbamitta.json
@@ -28,7 +28,7 @@
   "an3.62:5.3": "der Dörfer, Marktflecken und Städte fortreißt. ",
   "an3.62:5.4": "Wenn das passiert, kann eine Mutter manchmal ihr Kind finden und ein Kind kann seine Mutter finden. ",
   "an3.62:5.5": "Das ist die zweite Gefahr, die Mutter und Kind nicht auseinanderreißt. ",
-  "an3.62:6.1": "Weiterhin kommt da eine Zeit, wo Gefahr von wilden Räubern droht, und die Landbevölkerung steigt auf ihre Karren und flieht in alle Richtungen. ",
+  "an3.62:6.1": "Weiterhin kommt da eine Zeit, wo Gefahr durch Aufruhr in den unzivilisierten Gebieten droht, und die Landbevölkerung steigt auf ihre Karren und flieht in alle Richtungen. ",
   "an3.62:6.2": "Wenn das passiert, kann eine Mutter manchmal ihr Kind finden und ein Kind kann seine Mutter finden. ",
   "an3.62:6.3": "Das ist die dritte Gefahr, die Mutter und Kind nicht auseinanderreißt. ",
   "an3.62:6.4": "Das sind die drei Gefahren, die Mutter und Kind nicht auseinanderreißen, von denen ein ungebildeter gewöhnlicher Mensch spricht. ",
