--- a/translation/de/sabbamitta/sutta/an/an3/an3.93_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an3/an3.93_translation-de-sabbamitta.json
@@ -38,5 +38,5 @@
   "an3.93:7.1": "Ebenso nennt man einen Mönch, der sittlich ist, unmoralisches Verhalten aufgegeben hat und davon abgeschieden ist, ",
   "an3.93:7.2": "der rechte Ansicht hat, falsche Ansicht aufgegeben hat und davon abgeschieden ist, ",
   "an3.93:7.3": "der die Befleckungen aufgelöst hat, sie aufgegeben hat und davon abgeschieden ist, ",
-  "an3.93:7.4": "einen Mönch, der den Gipfel und den Kern erreicht hat, der rein und im Kern verankert ist.“ "
+  "an3.93:7.4": "einen Mönch, der den Gipfel und den Kern erreicht hat, der rein und im Kern gefestigt ist.“ "
 }
