--- a/translation/de/sabbamitta/sutta/dn/dn27_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn27_translation-de-sabbamitta.json
@@ -17,7 +17,7 @@
   "dn27:3.3": "„Herr, die Brahmanen beschimpfen und beleidigen uns tatsächlich mit ihren üblichen Beleidigungen in vollem Umfang.“ ",
   "dn27:3.4": "„Aber wie beleidigen euch die Brahmanen?“ ",
   "dn27:3.5": "„Herr, die Brahmanen sagen: ",
-  "dn27:3.6": "‚Nur die Brahmanen sind die beste Kaste; andere Kasten sind geringer. ",
+  "dn27:3.6": "‚Nur die Brahmanen sind die beste Klasse; andere Klassen sind geringer. ",
   "dn27:3.7": "Nur die Brahmanen sind die helle Kaste; andere Kasten sind dunkel. ",
   "dn27:3.8": "Nur die Brahmanen sind geläutert; andere sind es nicht. ",
   "dn27:3.9": "Nur die Brahmanen sind die rechtmäßigen Söhne Brahmās, aus seinem Mund geboren, aus Brahmā geboren, von Brahmā geschaffen, Erben Brahmās. ",
