--- a/translation/de/sabbamitta/sutta/dn/dn27_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn27_translation-de-sabbamitta.json
@@ -18,7 +18,7 @@
   "dn27:3.4": "„Aber wie beleidigen euch die Brahmanen?“ ",
   "dn27:3.5": "„Herr, die Brahmanen sagen: ",
   "dn27:3.6": "‚Nur die Brahmanen sind die beste Klasse; andere Klassen sind geringer. ",
-  "dn27:3.7": "Nur die Brahmanen sind die helle Kaste; andere Kasten sind dunkel. ",
+  "dn27:3.7": "Nur die Brahmanen sind die helle Klasse; andere Klassen sind dunkel. ",
   "dn27:3.8": "Nur die Brahmanen sind geläutert; andere sind es nicht. ",
   "dn27:3.9": "Nur die Brahmanen sind die rechtmäßigen Söhne Brahmās, aus seinem Mund geboren, aus Brahmā geboren, von Brahmā geschaffen, Erben Brahmās. ",
   "dn27:3.10": "Ihr beiden habt die beste Kaste verlassen, um euch einer geringeren Kaste anzuschließen, nämlich diesen glatzköpfigen Pfaffen, diesen falschen Asketen, diesen Primitiven, der schwarzen Ausgeburt aus den Füßen unseres Verwandten. ",
