--- a/translation/de/sabbamitta/sutta/dn/dn27_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn27_translation-de-sabbamitta.json
@@ -28,7 +28,7 @@
   "dn27:4.6": "Denn man sieht, dass Brahmaninnen ihre Periode haben, dass sie schwanger werden, Kinder gebären und stillen. ",
   "dn27:4.7": "Doch obwohl sie aus dem Schoß einer Brahmanin geboren wurden, sagen die Brahmanen: ",
   "dn27:4.8": "‚Nur die Brahmanen sind die beste Klasse; andere Klassen sind geringer. ",
-  "dn27:4.9": "Nur die Brahmanen sind die helle Kaste; andere Kasten sind dunkel. ",
+  "dn27:4.9": "Nur die Brahmanen sind die helle Klasse; andere Klassen sind dunkel. ",
   "dn27:4.10": "Nur die Brahmanen sind geläutert; andere sind es nicht. ",
   "dn27:4.11": "Nur die Brahmanen sind die rechtmäßigen Söhne Brahmās, aus seinem Mund geboren, aus Brahmā geboren, von Brahmā geschaffen, Erben Brahmās.‘ ",
   "dn27:4.12": "Sie stellen die Brahmanen falsch dar, reden falsch und schaffen viel Schlechtigkeit. ",
