--- a/translation/de/sabbamitta/sutta/dn/dn27_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn27_translation-de-sabbamitta.json
@@ -33,7 +33,7 @@
   "dn27:4.11": "Nur die Brahmanen sind die rechtmäßigen Söhne Brahmās, aus seinem Mund geboren, aus Brahmā geboren, von Brahmā geschaffen, Erben Brahmās.‘ ",
   "dn27:4.12": "Sie stellen die Brahmanen falsch dar, reden falsch und schaffen viel Schlechtigkeit. ",
   "dn27:5.0": "1. Reinheit in den vier Klassen ",
-  "dn27:5.1": "Vāseṭṭha, es gibt diese vier Kasten: ",
+  "dn27:5.1": "Vāseṭṭha, es gibt diese vier Klassen: ",
   "dn27:5.2": "Adlige, Brahmanen, Landarbeiter und Hilfsarbeiter. ",
   "dn27:5.3": "Manche Adlige töten lebende Geschöpfe, stehlen und begehen sexuelle Verfehlungen. Sie gebrauchen falsche, entzweiende, harte oder unsinnige Rede. Und sie sind begehrlich und böswillig und haben falsche Ansicht. ",
   "dn27:5.4": "Diese Dinge sind untauglich, tadelnswert, sollten nicht gepflegt werden und sind der Edlen nicht würdig, und sie werden als solche angesehen. Es sind dunkle Taten mit dunklem Ergebnis, die von vernünftigen Menschen getadelt werden. Solche Dinge sind bei manchen Adligen ersichtlich. ",
