--- a/translation/de/sabbamitta/sutta/dn/dn27_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn27_translation-de-sabbamitta.json
@@ -47,7 +47,7 @@
   "dn27:6.5": "und Hilfsarbeitern. ",
   "dn27:7.1": "So kommt beides vor und ist über die vier Klassen verteilt – das Dunkle und das Helle, das, was von vernünftigen Menschen gepriesen und was von ihnen getadelt wird. Und doch sagen die Brahmanen: ",
   "dn27:7.2": "‚Nur die Brahmanen sind die beste Klasse; andere Klassen sind geringer. ",
-  "dn27:7.3": "Nur die Brahmanen sind die helle Kaste; andere Kasten sind dunkel. ",
+  "dn27:7.3": "Nur die Brahmanen sind die helle Klasse; andere Klassen sind dunkel. ",
   "dn27:7.4": "Nur die Brahmanen sind geläutert; andere sind es nicht. ",
   "dn27:7.5": "Nur die Brahmanen sind die rechtmäßigen Söhne Brahmās, aus seinem Mund geboren, aus Brahmā geboren, von Brahmā geschaffen, Erben Brahmās.‘ ",
   "dn27:7.6": "Vernünftige Menschen erkennen das nicht an. ",
