--- a/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
@@ -37,7 +37,7 @@
   "mn93:5.2": "Nach der Begrüßung und dem Austausch von Höflichkeiten setzte er sich zur Seite hin und sagte zum Buddha: ",
   "mn93:5.3": "„Meister Gotama, die Brahmanen sagen: ",
   "mn93:5.4": "‚Nur die Brahmanen sind die beste Klasse; andere Klassen sind geringer. ",
-  "mn93:5.5": "Nur die Brahmanen sind die helle Kaste; andere Kasten sind dunkel. ",
+  "mn93:5.5": "Nur die Brahmanen sind die helle Klasse; andere Klassen sind dunkel. ",
   "mn93:5.6": "Nur die Brahmanen sind geläutert; andere sind es nicht. ",
   "mn93:5.7": "Nur die Brahmanen sind die rechtmäßigen Söhne Brahmās, aus seinem Mund geboren, aus Brahmā geboren, von Brahmā geschaffen, Erben Brahmās.‘ ",
   "mn93:5.8": "Was sagt der Asket Gotama dazu?“ ",
