--- a/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
@@ -44,7 +44,7 @@
   "mn93:5.9": "„Aber Assalāyana, man sieht, dass Brahmaninnen ihre Periode haben, dass sie schwanger werden, Kinder gebären und stillen. ",
   "mn93:5.10": "Doch obwohl sie aus dem Schoß einer Brahmanin geboren wurden, sagen die Brahmanen: ",
   "mn93:5.11": "‚Nur die Brahmanen sind die beste Klasse; andere Klassen sind geringer. ",
-  "mn93:5.12": "Nur die Brahmanen sind die helle Kaste; andere Kasten sind dunkel. ",
+  "mn93:5.12": "Nur die Brahmanen sind die helle Klasse; andere Klassen sind dunkel. ",
   "mn93:5.13": "Nur die Brahmanen sind geläutert; andere sind es nicht. ",
   "mn93:5.14": "Nur die Brahmanen sind die rechtmäßigen Söhne Brahmās, aus seinem Mund geboren, aus Brahmā geboren, von Brahmā geschaffen, Erben Brahmās.‘“ ",
   "mn93:6.1": "„Auch wenn der Asket Gotama das sagt, so bleiben die Brahmanen doch bei ihrem Glauben.“ ",
