--- a/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
@@ -126,7 +126,7 @@
   "mn93:17.5": "Auf diese Worte saß Assalāyana schweigend und betroffen da, mit hängenden Schultern und gesenktem Kopf, gedrückt, niedergeschlagen, und konnte nichts sagen. ",
   "mn93:18.1": "Als der Buddha das erkannte, sagte er zu ihm: ",
   "mn93:18.2": "„Es waren einmal, Assalāyana, sieben brahmanische Seher, die sich in Laubhütten in einem Wildnisgebiet niedergelassen hatten. Sie hatten den folgenden schädlichen Irrglauben: ",
-  "mn93:18.3": "‚Nur die Brahmanen sind die beste Kaste; andere Kasten sind geringer. ",
+  "mn93:18.3": "‚Nur die Brahmanen sind die beste Klasse; andere Klassen sind geringer. ",
   "mn93:18.4": "Nur die Brahmanen sind die helle Kaste; andere Kasten sind dunkel. Nur die Brahmanen sind geläutert; andere sind es nicht. ",
   "mn93:18.5": "Nur die Brahmanen sind die rechtmäßigen Söhne Brahmās, aus seinem Mund geboren, aus Brahmā geboren, von Brahmā geschaffen, Erben Brahmās.‘ ",
   "mn93:18.6": "Davon hörte der Seher Devala der Dunkle. ",
