--- a/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
@@ -158,7 +158,7 @@
   "mn93:18.37": "Da begaben sie sich zu Devala und verbeugten sich vor ihm. ",
   "mn93:18.38": "Devala sagte zu ihnen: ",
   "mn93:18.39": "‚Ich habe gehört, dass die sieben brahmanischen Seher, als sie sich in Laubhütten in einem Wildnisgebiet niedergelassen hatten, den folgenden schädlichen Irrglauben hatten: ",
-  "mn93:18.40": "„Nur die Brahmanen sind die beste Kaste; andere Kasten sind geringer. ",
+  "mn93:18.40": "„Nur die Brahmanen sind die beste Klasse; andere Klassen sind geringer. ",
   "mn93:18.41": "Nur die Brahmanen sind die helle Kaste; andere Kasten sind dunkel. ",
   "mn93:18.42": "Nur die Brahmanen sind geläutert; andere sind es nicht. ",
   "mn93:18.43": "Nur die Brahmanen sind die rechtmäßigen Söhne Brahmās, aus seinem Mund geboren, aus Brahmā geboren, von Brahmā geschaffen, Erben Brahmās.“‘ ",
