--- a/translation/de/sabbamitta/sutta/dn/dn14_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn14_translation-de-sabbamitta.json
@@ -102,7 +102,7 @@
   "dn14:1.13.1": "Kurz nachdem der Buddha gegangen war, redeten diese Mönche und Nonnen untereinander: ",
   "dn14:1.13.2": "„Es ist unglaublich, Geehrter, es ist erstaunlich! Der Klargewordene besitzt solche übersinnliche Kraft und Macht! ",
   "dn14:1.13.3": "Denn er ist in der Lage, sich an Geburt, Namen, Stamm, Lebensdauer, Hauptschüler und Zusammenkünfte von Schülern der Buddhas der Vergangenheit zu erinnern, die vollkommen erloschen sind, die das Wuchern abgeschnitten, die Spur abgeschnitten, den Kreislauf zu Ende gebracht haben und über alles Leiden hinausgegangen sind. ",
-  "dn14:1.13.4": "Er kennt die Kaste, in der sie geboren wurden, und auch ihre Namen, ihren Stamm, ihr Verhalten, ihre Eigenschaften, ihre Weisheit, ihre Meditation und ihre Freiheit. ",
+  "dn14:1.13.4": "Er kennt ihre Geburt, ihre Namen, ihren Stamm, ihr Verhalten, ihre Eigenschaften, ihre Weisheit, ihre Meditation und ihre Freiheit. ",
   "dn14:1.13.5": "Kann der Klargewordene sich an all diese Dinge erinnern, weil er das Prinzip der Lehren klar erfasst hat? ",
   "dn14:1.13.6": "Oder haben Gottheiten es ihm gesagt?“ ",
   "dn14:1.13.7": "Doch die Unterhaltung zwischen diesen Mönchen und Nonnen wurde unterbrochen. ",
