--- a/translation/de/sabbamitta/sutta/mn/mn81_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn81_translation-de-sabbamitta.json
@@ -69,7 +69,7 @@
   "mn81:9.4": "Denn ich erachte es als heilig, diesen Gesegneten zu sehen.‘ ",
   "mn81:9.5": "Da dachte Jotipāla: ",
   "mn81:9.6": "‚Wie unglaublich! Wie erstaunlich! ",
-  "mn81:9.7": "Wie dieser Töpfer Ghaṭīkāra, obwohl er in einer niedrigeren Kaste geboren ist, sich erlaubt, mich an den Haaren meines frisch gewaschenen Kopfes zu packen! ",
+  "mn81:9.7": "Wie dieser Töpfer Ghaṭīkāra, obwohl er von niederer Geburt ist, sich erlaubt, mich an den Haaren meines frisch gewaschenen Kopfes zu packen! ",
   "mn81:9.8": "Es kann sich hier um keine gewöhnliche Sache handeln.‘ ",
   "mn81:9.9": "Er sagte zu Ghaṭīkāra: ",
   "mn81:9.10": "‚Du melkst mich bis zu diesem Punkt, lieber Ghaṭīkāra?‘ ",
