--- a/translation/de/sabbamitta/sutta/sn/sn24/sn24.70_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn24/sn24.70_translation-de-sabbamitta.json
@@ -21,7 +21,7 @@
   "sn24.70:3.6": "„Nein, Herr.“ ",
   "sn24.70:3.7": "„Daher ist, was unbeständig ist, Leiden. ",
   "sn24.70:3.8": "Wenn das besteht, weil man das ergreift, entsteht die Ansicht: ",
-  "sn24.70:3.9": "‚Das Selbst erfährt nach dem Tod weder Leiden noch Glück, und es ist heil.‘ ",
+  "sn24.70:3.9": "‚Das Selbst erfährt nach dem Tod weder Leiden noch Glück, und es ist frei von Krankheit.‘ ",
   "sn24.70:3.10": "Ist Gefühl … ",
   "sn24.70:3.11": "Ist Wahrnehmung … ",
   "sn24.70:3.12": "Sind Entscheidungen … ",
