--- a/translation/de/sabbamitta/sutta/sn/sn24/sn24.70_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn24/sn24.70_translation-de-sabbamitta.json
@@ -28,7 +28,7 @@
   "sn24.70:3.13": "Ist Bewusstsein beständig oder unbeständig?“ ",
   "sn24.70:3.14": "„Unbeständig, Herr.“ … ",
   "sn24.70:3.15": "„Aber wenn man nicht ergreifen würde, was unbeständig und Leiden ist und zugrunde gehen muss, würde dadurch die Ansicht entstehen: ",
-  "sn24.70:3.16": "‚Das Selbst erfährt nach dem Tod weder Leiden noch Glück, und es ist heil‘?“ ",
+  "sn24.70:3.16": "‚Das Selbst erfährt nach dem Tod weder Leiden noch Glück, und es ist frei von Krankheit‘?“ ",
   "sn24.70:3.17": "„Nein, Herr.“ ",
   "sn24.70:3.18": "„Daher ist, was unbeständig ist, Leiden. ",
   "sn24.70:3.19": "Wenn das besteht, weil man das ergreift, entsteht die Ansicht: ",
