--- a/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
@@ -154,5 +154,6 @@
   "mn122:25.3": "Und wie behandeln Schüler ihren Lehrer als Feind, nicht als Freund? ",
   "mn122:25.4": "Da lehrt der Lehrer die Schüler aus Güte und Anteilnahme den Dhamma: ",
   "mn122:25.5": "‚Das ist zu eurem Wohl. Das ist zu eurem Glück.‘ ",
-  "mn122:25.6": "Aber seine Schüler wollen nicht zuhören. Sie spitzen nicht die Ohren und versuchen nicht, zu verstehen. Sie wenden sich von der Anleitung des Lehrers ab und gehen weiter. "
+  "mn122:25.6": "Aber seine Schüler wollen nicht zuhören. Sie spitzen nicht die Ohren und versuchen nicht, zu verstehen. Sie wenden sich von der Anleitung des Lehrers ab und gehen weiter. ",
+  "mn122:25.7": "So behandeln Schüler ihren Lehrer als Feind, nicht als Freund. "
 }
