--- a/translation/pl/hardao/sutta/sn/sn22/sn22.1_translation-pl-hardao.json
+++ b/translation/pl/hardao/sutta/sn/sn22/sn22.1_translation-pl-hardao.json
@@ -18,7 +18,7 @@
   "sn22.1:9.2": "Zdarza się, gospodarzu, że niepouczony, pospolity człowiek – który nie ma czci dla Szlachetnych, nie jest obeznany z ich Nauką ani nie jest wykształcony w ich Dhammie, który nie ma czci dla Prawych, nie jest obeznany z ich Nauką ani nie jest wykształcony w ich Dhammie, ",
   "sn22.1:9.3": "uznaje formę materialną za istotę lub istotę posiadającą formę materialną, lub formę materialną w istocie, lub istotę w formie materialnej. ",
   "sn22.1:9.4": "Pozostaje w obsesji: »Jestem formą materialną, forma materialna jest moja«. ",
-  "sn22.1:9.5": "Gdy ma obsesję: „Jestem formą materialną, forma materialna jest moja”, jego forma materialna wypacza się i staje się inna. ",
+  "sn22.1:9.5": "Gdy pozostaje w obsesji: »Jestem formą materialną, forma materialna jest moja«, jego forma materialna wypacza się i staje się inna. ",
   "sn22.1:9.6": "Gdy forma materialna wypacza się i staje się inna, powstają w nim żal, lament, krzywda, smutek i rozpacz. ",
   "sn22.1:10.1": "Uznaje odczucie za istotę lub istotę posiadającą odczucie, lub odczucie w istocie, lub istotę w odczuciu. ",
   "sn22.1:10.2": "Ma obsesję: „Jestem odczuciem, odczucie jest moje”. ",
