--- a/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
@@ -165,5 +165,6 @@
   "mn122:26.7": "Das wird zu eurem langanhaltenden Nutzen und Glück sein. ",
   "mn122:27.1": "Ich werde euch nicht verhätscheln wie ein Töpfer seine feuchten, ungebrannten Töpfe. ",
   "mn122:27.2": "Ich werde sprechen, indem ich euch wieder und wieder maßregele, ",
-  "mn122:27.3": "euch wieder und wieder auf euch eindringe. "
+  "mn122:27.3": "euch wieder und wieder auf euch eindringe. ",
+  "mn122:27.4": "Der Kern wird die Prüfung bestehen.“ "
 }
