--- a/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
@@ -167,5 +167,6 @@
   "mn122:27.2": "Ich werde sprechen, indem ich euch wieder und wieder maßregele, ",
   "mn122:27.3": "euch wieder und wieder auf euch eindringe. ",
   "mn122:27.4": "Der Kern wird die Prüfung bestehen.“ ",
-  "mn122:27.5": "Das sagte der Buddha. "
+  "mn122:27.5": "Das sagte der Buddha. ",
+  "mn122:27.6": "Zufrieden freute sich der Ehrwürdige Ānanda über die Worte des Buddha. "
 }
