--- a/translation/pl/hardao/sutta/sn/sn22/sn22.1_translation-pl-hardao.json
+++ b/translation/pl/hardao/sutta/sn/sn22/sn22.1_translation-pl-hardao.json
@@ -40,7 +40,7 @@
   "sn22.1:14.1": "W jaki sposób, gospodarzu, doskwiera ciało, ale nie doskwiera umysł? ",
   "sn22.1:14.2": "Zdarza się, gospodarzu, że pouczony człowiek, uczeń Szlachetnych – który ma cześć dla Szlachetnych, jest obeznany z ich Nauką oraz jest wykształcony w ich Dhammie, który ma cześć dla Prawych, jest obeznany z ich Nauką oraz jest wykształcony w ich Dhammie, ",
   "sn22.1:14.3": "nie uznaje formy materialnej za istotę ani istoty posiadającej formę materialną, ani formy materialnej w istocie, ani istoty w formie materialnej. ",
-  "sn22.1:14.4": "Nie ma obsesji: „Jestem formą materialną, forma materialna jest moja”. ",
+  "sn22.1:14.4": "Nie pozostaje w obsesji: »Jestem formą materialną, forma materialna jest moja«. ",
   "sn22.1:14.5": "Gdy nie ma obsesji: „Jestem formą materialną, forma materialna jest moja”, jego forma materialna wypacza się i staje się inna. ",
   "sn22.1:14.6": "Gdy forma materialna wypacza się i staje się inna, nie powstają w nim żal, lament, krzywda, smutek i rozpacz. ",
   "sn22.1:15.1": "Nie uznaje odczucia za istotę ani istoty posiadającej odczucie, ani odczucia w istocie, ani istoty w odczuciu. ",
