--- a/translation/en/sujato/sutta/mn/mn82_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/mn/mn82_translation-en-sujato.json
@@ -205,7 +205,7 @@
   "mn82:27.4": "“Yes, Your Majesty,” replied the gamekeeper. While tidying the deer range he saw Raṭṭhapāla sitting in meditation. ",
   "mn82:27.5": "Seeing this, he went to the king, and said, ",
   "mn82:27.6": "“The deer range is tidy, sire. ",
-  "mn82:27.7": "And the gentleman named Raṭṭhapāla, the son of the leading clan in Thullakoṭṭhita, of whom you have often spoken highly, is meditating there at the root of a tree.” ",
+  "mn82:27.7": "And the gentleman named Raṭṭhapāla, the son of the leading clan in Thullakoṭṭhika, of whom you have often spoken highly, is meditating there at the root of a tree.” ",
   "mn82:27.8": "“Well then, my good gamekeeper, that’s enough of the park for today. ",
   "mn82:27.9": "Now I shall pay homage to the Master Raṭṭhapāla.” ",
   "mn82:28.1": "And then King Koravya said, “Give away the fresh and cooked foods that have been prepared there.” He had the finest carriages harnessed. Then he mounted a fine carriage and, along with other fine carriages, set out in full royal pomp from Thullakoṭṭhita to see Raṭṭhapāla. ",
