--- a/translation/en/sujato/sutta/mn/mn82_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/mn/mn82_translation-en-sujato.json
@@ -107,7 +107,7 @@
   "mn82:12.2": "“Sir, I have my parents’ permission to go forth from the lay life to homelessness. ",
   "mn82:12.3": "May the Buddha please give me the going forth.” ",
   "mn82:13.1": "And Raṭṭhapāla received the going forth, the ordination in the Buddha’s presence. ",
-  "mn82:13.2": "Not long after Venerable Raṭṭhapāla’s ordination, a fortnight later, the Buddha—having stayed in Thullakoṭṭhita as long as he pleased—set out for Sāvatthī. ",
+  "mn82:13.2": "Not long after Venerable Raṭṭhapāla’s ordination, a fortnight later, the Buddha—having stayed in Thullakoṭṭhika as long as he pleased—set out for Sāvatthī. ",
   "mn82:13.3": "Traveling stage by stage, he arrived at Sāvatthī, ",
   "mn82:13.4": "where he stayed in Jeta’s Grove, Anāthapiṇḍika’s monastery. ",
   "mn82:14.1": "Then Venerable Raṭṭhapāla, living alone, withdrawn, diligent, keen, and resolute, soon realized the supreme end of the spiritual path in this very life. He lived having achieved with his own insight the goal for which gentlemen rightly go forth from the lay life to homelessness. ",
