--- a/translation/it/soma/sutta/mn/mn28_translation-it-soma.json
+++ b/translation/it/soma/sutta/mn/mn28_translation-it-soma.json
@@ -14,5 +14,6 @@
   "mn28:7.4": "Che dire di questo corpo di breve vita, tenuto in vita/alimentata/appropriata (tenuto acceso) dall'arsura/sete infinita: di certo in questo caso non si puo' dire questo sono io, questo mi appartiene. ",
   "mn28:8.1": "Se altre persone insultano, denigrano, infastidiscono, irritano quel cercatore, quello sa: ",
   "mn28:8.2": "‘Sono apparse dentro di me delle sensazioni spiacevoli una volta che hanno toccato l'orecchio. ",
-  "mn28:8.3": "Queste cose sono dipendenti, non sono indipendenti. "
+  "mn28:8.3": "Queste cose sono dipendenti, non sono indipendenti. ",
+  "mn28:8.4": "Dipendono da cosa? "
 }
