--- a/translation/en/sujato/sutta/mn/mn82_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/mn/mn82_translation-en-sujato.json
@@ -137,7 +137,7 @@
   "mn82:18.5": "She then went to his mother and said, ",
   "mn82:18.6": "“Please, madam, you should know this. ",
   "mn82:18.7": "Master Raṭṭhapāla has arrived.” ",
-  "mn82:18.8": "“Wow! If you speak the truth, I’ll make you a free woman!” ",
+  "mn82:18.8": "“If you speak the truth, wench, I’ll make you a free woman!” ",
   "mn82:18.9": "Then Raṭṭhapāla’s mother went to his father and said, ",
   "mn82:18.10": "“Please householder, you should know this. ",
   "mn82:18.11": "It seems our son Raṭṭhapāla has arrived.” ",
