--- a/translation/de/sabbamitta/sutta/mn/mn133_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn133_translation-de-sabbamitta.json
@@ -36,5 +36,6 @@
   "mn133:5.9": "Heute ist der Tag, um sich anzustrengen; ",
   "mn133:5.10": "wer weiß, ob morgen der Tod kommt! ",
   "mn133:5.11": "Denn es gibt kein Feilschen ",
-  "mn133:5.12": "mit dem Tod und seinem mächtigen Heer. "
+  "mn133:5.12": "mit dem Tod und seinem mächtigen Heer. ",
+  "mn133:5.13": "Der friedvolle Abgeklärte erklärte es: "
 }
